syntax = "proto3";

package onight.zjfae.afront.gens.v5;
option java_outer_classname="ProductList";

//Generated By BrewRobot:Wed Sep 20 10:06:00 CST 2017

message PBIFE_prdsubscribequery_prdQuerySubscribeProductListNew{
	///ife/prdsubscribequery/prdQuerySubscribeProductListNew.html
	message IconsList{
		string iconsPosition = 1;	 //,图标具体方位,String,不校验,是,
		string uuid = 2;	 //,图标uuid,String,不校验,是,
	}

	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总PBIFE_prdquery_prdQueryProductDetails页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message ProductFinanceDetailList{
		string orderType = 1;	 //,预约类型,String,不校验,是,0-特约;1-普通预约;2-定值预约
		string productCode = 2;	 //,产品code,String,不校验,是,
		string productName = 3;	 //,产品名称,String,不校验,是,
		string buyStartDate = 4;	 //,认购开始时间,String,不校验,是,
		string buyEndDate = 5;	 //,认购结束时间,String,不校验,是,
		string buyEndTimes = 6;	 //,认购剩余时长,String,不校验,是,
		string manageStartDate = 7;	 //,管理期限开始时间,String,不校验,是,
		string manageEndDate = 8;	 //,管理期限结束时间,String,不校验,是,
		string riskLevel = 9;	 //,风险等级,String,不校验,是,
		string riskLevelStr = 10;	 //,风险等级前台展示,String,不校验,是,
		string buyerSmallestAmount = 11;	 //,买家最小购买单位,String,不校验,是,
		string buyTotalAmount = 12;	 //,发行总规模,String,不校验,是,
		string buyRemainAmount = 13;	 //,发行剩余量,String,不校验,是,
		string remainAmountInit = 14;	 //,普通份额不变,String,不校验,是,
		string subjectType = 15;	 //,产品类别,String,不校验,是,
		string subjectTypeName = 16;	 //,产品类别名称,String,不校验,是,
		string prodSubType = 17;	 //,产品小类,String,不校验,是,
		string deadline = 18;	 //,理财期限,String,不校验,是,
		string expectedMaxAnnualRate = 19;	 //,预期年化收益率,String,不校验,是,
		string productSubType = 20;	 //,挂牌方式,String,不校验,是,
		string status = 21;	 //,产品的状态,String,不校验,是,
		string mostHolderNum = 22;	 //,认购人数,String,不校验,是,
		string specialCustomerNum = 23;	 //,特约客户人数,String,不校验,是,
		string orderBy = 24;	 //,排序,String,不校验,是,
		string orderAsc = 25;	 //,升降序,String,不校验,是,
		string brokerCodeList = 26;	 //,经纪商编号,List,不校验,是,
		string brokerNoList = 27;	 //,渠道列表,List,不校验,是,
		string channelNoList = 28;	 //,终端列表,List,不校验,是,
		string warnFlag = 29;	 //,是否开始销售,String,不校验,是,0表示没有  1表示已经开始
		string isSpecial = 30;	 //,是否是特约客户,String,不校验,是,0 否 1是
		string onlyMobile = 31;	 //,是否手机专享,String,不校验,是,0 否 1是
		string onlyWeiXin = 32;	 //,是否微信专享,String,不校验,是,0 否 1是
		string account = 33;	 //,账户号,String,不校验,是,
		string isAccepted = 34;	 //,是否认购,String,不校验,是,
		string deadLineList = 35;	 //,产品剩余期限查询条件,List,不校验,是,
		string expectedMaxAnnualRateList = 36;	 //,预期收益率查询条件,List,不校验,是,
		string riskLevelList = 37;	 //,风险等级查询条件,List,不校验,是,
		string subjectTypeList = 38;	 //,产品类型查询条件,List,不校验,是,
		string buyerSmallestAmountList = 39;	 //,起购金额查询条件,List,不校验,是,
		string saleObjectList = 40;	 //,销售对象查询条件,List,不校验,是,
		string onlyNew = 41;	 //,新用户专享字段,String,不校验,是,'0,老用户;1,新用户'
		string process = 42;	 //,剩余百分比进度条,String,不校验,是,
		string sellingStatus = 43;	 //,销售状态,String,不校验,是,0-敬请期待，1-售卖中，2-已售罄，3-已结束
		string canBuyNum = 44;	 //,可购人数,String,不校验,是,
		string isSpecialProduct = 45;	 //,是否是特约产品 ,String,不校验,是,0-否1-是
		string subscribeNum = 46;	 //,普通客户认购人数 ,String,不校验,是,
		string specialAmountInit = 47;	 //,特约份额不变 ,String,不校验,是,
		string iconsType = 48;	 //,可用卡劵图标类型 ,String,不校验,是,其中9999为无
		string isTransfer = 49;	 //,是否可转让 ,String,不校验,是,
		string unActualTransferUserLevel = 50;	 //,受让会员等级 ,String,不校验,是,
		string unActualBuyUserLevel = 51;	 //,认购会员等级,String,不校验,是,
		string canUseKq = 52;	 //,是否可用卡券 ,String,不校验,是,
		message IconsList{
			string iconsPosition = 1;		 //,图标具体方位,String,不校验,是,
			string uuid = 2;		 //,图标uuid,String,不校验,是,
		}

		repeated IconsList iconsList = 53;
	}


	PageInfo pageInfo = 1; //,产品列表,List,不校验,是,

	repeated ProductFinanceDetailList productFinanceDetailList = 2;

	string isListed = 3; //,是否已挂牌 ,String,不校验,是,0-否1-是

	string isjump =4; //true:跳转。false：不跳转

	string jumpurl=5;//跳转url

	string isShare=6;//是否分享；0：否；1：是

}

message Ret_PBIFE_prdsubscribequery_prdQuerySubscribeProductListNew{
	///ife/prdsubscribequery/prdQuerySubscribeProductListNew.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdsubscribequery_prdQuerySubscribeProductListNew data=3;


}

message REQ_PBIFE_prdsubscribequery_prdQuerySubscribeProductListNew{
	///ife/prdsubscribequery/prdQuerySubscribeProductListNew.html

	string versionNo = 1; //,版本号,String,不校验,是,

	string deadLineQuery = 2; //,剩余期限,String,不校验,是,

	string expectedMaxAnnualRateQuery = 3; //,预期收益率,String,不校验,是,

	string riskLevelQuery = 4; //,风险等级,String,不校验,是,

	string subjectTypeQuery = 5; //,产品类型,String,不校验,是,

	string buyerSmallestAmountQuery = 6; //,起购金额,String,不校验,是,

	string saleObjectQuery = 7; //,销售对象,String,不校验,是,

	string pageIndex = 8; //,当前页,String,不校验,是,默认1

	string pageSize = 9; //,页大小,String,不校验,是,默认10

	string orderBy = 10; //,排序,String,不校验,是,

	string orderAsc = 11; //,升降序,String,不校验,是,

	string productCode = 12; //,产品编号,String,不校验,是,

	string productName = 13; //,产品名称,String,不校验,是,

	string marketingChannel = 14; //,销售对象,String,不校验,是,

	string terminalNo = 15; //,终端编号,String,不校验,是,11-网站，12-移动终端，13-微信，14-柜台，15-其他，16-接口

	string brokerCode = 16; //,经纪商编号,String,不校验,是,

	string sellingStatus = 17; //,销售状态,String,不校验,是,0-敬请期待，1-售卖中，2-已售罄，3-已结束

	string uuids = 18; //,排序控件,String,不校验,是,用-分隔

	string quanDetailsId = 19; //,卡券编号,String,不校验,是,KD＋X＋6位大序号＋时间后三位;X为红包R;满减F;加息A;抵价L;其他T

	string quanUsedProductCode = 20; //,核销产品编号,String,不校验,是,

	string quanUsedSeriesCode = 21; //,核销系列编号,String,不校验,是,

	string productDeadLineTypeQuery = 22; //,短中长期产品,String,不校验,是,0-短期1-中期2-长期

	string isOnlyNew = 23; //,新客专享,String,不校验,是,0-否1-是

	string productCodeAndSerialNo = 24; //,产品编号和系列,String,不校验,是,quanUsedProductCode|quanUsedSeriesCode

	string buyerSmallestAmountBegin = 25; // ,起购金额开始,String,不校验,是,

	string buyerSmallestAmountEnd = 26; //,起购金额结束,String,不校验,是,

	string isBasedOnAccount = 27;//,是否根据个人查询,String,不校验,是,

}